[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-tiptop"
authors = [
    {name = "Fabio Rossi", email = "fabio.rossi@inaf.it"},
]
description = ""
readme = "README.md"
urls = {repository = "https://github.com/astro-tiptop/TIPTOP"}
requires-python = ">=3.9"
license = {text = "MIT License"}
dependencies = [
    "matplotlib",
    "numpy",
    "pyyaml",
    "astro-p3>=1.2.7",
    "mastsel>=1.2.5",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = ["sphinx"]
gpu = ["mastsel[gpu]"]
gui = ["ipywidgets"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
write_to = "tiptop/_version.py"
