[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-tiptop"
authors = [
    {name = "Fabio Rossi", email = "fabio.rossi@inaf.it"},
]
description = ""
readme = "README.md"
urls = {repository = "https://github.com/astro-tiptop/TIPTOP"}
requires-python = ">=3.11"
license = {text = "MIT License"}
dependencies = [
    "matplotlib",
    "numpy",
    "pyyaml",
    "astro-p3>=1.2.11",
    "mastsel>=1.2.9",
    "torch>=2.1.2",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = ["sphinx"]
gpu = ["mastsel[gpu]"]
gui = ["ipywidgets"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
write_to = "tiptop/_version.py"
